--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   api:
-    container_name: "ST-API"
+    container_name: "python_http_status"
     build:
       context: .
       dockerfile: Dockerfile
